crates/ddlog-syntax/tests/inline/pass/block_exprs.rast
ROOT@0..41
  COMMENT@0..12 "// kind:expr"
  WHITESPACE@12..13 "\n"
  EXPR@13..41
    BIN_EXPR@13..41
      BLOCK@13..19
        L_CURLY@13..14 "{"
        EXPR@14..18
          WHITESPACE@14..15 " "
          LITERAL@15..17
            NUMBER@15..17 "10"
          WHITESPACE@17..18 " "
        R_CURLY@18..19 "}"
      WHITESPACE@19..20 " "
      BIN_OP@20..21
        MINUS@20..21 "-"
      WHITESPACE@21..22 " "
      BLOCK@22..40
        L_CURLY@22..23 "{"
        EXPR@23..39
          BLOCK@23..39
            L_CURLY@23..24 "{"
            EXPR@24..38
              WHITESPACE@24..25 " "
              BIN_EXPR@25..38
                LITERAL@25..26
                  NUMBER@25..26 "5"
                WHITESPACE@26..27 " "
                BIN_OP@27..28
                  PLUS@27..28 "+"
                WHITESPACE@28..29 " "
                PAREN_EXPR@29..37
                  L_PAREN@29..30 "("
                  EXPR@30..36
                    BLOCK@30..36
                      L_CURLY@30..31 "{"
                      EXPR@31..35
                        WHITESPACE@31..32 " "
                        LITERAL@32..34
                          NUMBER@32..34 "99"
                        WHITESPACE@34..35 " "
                      R_CURLY@35..36 "}"
                  R_PAREN@36..37 ")"
                WHITESPACE@37..38 " "
            R_CURLY@38..39 "}"
        R_CURLY@39..40 "}"
      WHITESPACE@40..41 "\n"