crates/ddlog-syntax/tests/inline/fail/function_arg_without_comma.rast
ROOT@0..50
  COMMENT@0..12 "// kind:item"
  WHITESPACE@12..13 "\n"
  ITEM@13..50
    FUNC_DEF@13..50
      MODIFIERS@13..13
      FUNCTION@13..21 "function"
      WHITESPACE@21..22 " "
      FUNC_NAME@22..25
        IDENT@22..25 "foo"
      FUNC_ARGS@25..46
        L_PAREN@25..26 "("
        FUNC_ARG@26..34
          IDENT@26..29 "bar"
          COLON@29..30 ":"
          WHITESPACE@30..31 " "
          IDENT@31..34 "Baz"
        WHITESPACE@34..35 " "
        FUNC_ARG@35..45
          IDENT@35..39 "bing"
          COLON@39..40 ":"
          WHITESPACE@40..41 " "
          IDENT@41..45 "Bang"
        R_PAREN@45..46 ")"
      WHITESPACE@46..47 " "
      BLOCK@47..49
        L_CURLY@47..48 "{"
        R_CURLY@48..49 "}"
      WHITESPACE@49..50 "\n"
--
Error: expected a comma between function arguments
   ,-[inline/fail/function_arg_without_comma.dl:2:23]
   |
 2 | function foo(bar: Baz bing: Bang) {}
   :                       ^^|^  
   :                         `--- expected a comma
---'
--
// kind:item
function foo(bar: Baz bing: Bang) {}

